docs/defaultDeny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: ddns
spec:
  podSelector: {}
  policyTypes:
    - Ingress
