docs/networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rfc2136-gateway-restrict-port53
  namespace: ddns
spec:
  podSelector:
    matchLabels:
      app: rfc2136-gateway
  policyTypes:
    - Ingress
  ingress:
    - from:
        # Allow traffic only from pods with this label
        - podSelector:
            matchLabels:
              allow-rfc2136: "true"
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
